2.0.0! Fixes and improvements - New config format (v3), old (v2) configs will be automatically updated to it. - Rewritten support for markdown and legacy formatting (aka &X) to make it more relable - Replaced operator level/permission checks with more dynamic predicates, allowing way more flexibility, check https://github.com/Patbox/PredicateAPI for more info - You can change styles via permission options (for LuckPerms it's Meta values), using `styled_chat.<path>`,   where `<path>` is dot separated key names from style config (example `styled_chat.message_formats.chat`) - You can now change style per player with `/styledchat set` command - You can now enable chat formatting per style instead of it being only global + permission - You can change style of pet death message, spoiler and urls with predicate-based styles (it was previously global) - Fixed few bugs, including empty messages not working correctly