@@ -2,18 +2,20 @@ package eu.pb4.styledchat.config;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import eu.pb4.predicate.api.GsonPredicateSerializer;
+import eu.pb4.predicate.api.MinecraftPredicate;
 import eu.pb4.styledchat.StyledChatMod;
 import eu.pb4.styledchat.config.data.ConfigData;
 import eu.pb4.styledchat.config.data.VersionConfigData;
+import eu.pb4.styledchat.config.data.old.ConfigDataV2;
 import net.fabricmc.loader.api.FabricLoader;
-import org.apache.commons.io.IOUtils;
 
-import java.io.*;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 
 public class ConfigManager {
-    public static final int VERSION = 2;
-    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().setLenient().create();
+    public static final Gson GSON = new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().setLenient()
+            .registerTypeHierarchyAdapter(MinecraftPredicate.class, GsonPredicateSerializer.INSTANCE).create();
 
     private static Config config = null;
     private static ConfigData configData = null;
@@ -38,25 +40,27 @@ public class ConfigManager {
         config = null;
         try {
             ConfigData config;
-            File configFile = new File(FabricLoader.getInstance().getConfigDir().toFile(), "styled-chat.json");
+            var configFile = FabricLoader.getInstance().getConfigDir().resolve("styled-chat.json");
 
 
-            if (configFile.exists()) {
-                String json = IOUtils.toString(new InputStreamReader(new FileInputStream(configFile), StandardCharsets.UTF_8));
+            if (Files.exists(configFile)) {
+                String json = Files.readString(configFile, StandardCharsets.UTF_8);
                 VersionConfigData versionConfigData = GSON.fromJson(json, VersionConfigData.class);
 
-                config = ConfigData.transform(switch (versionConfigData.CONFIG_VERSION_DONT_TOUCH_THIS) {
-                    default -> GSON.fromJson(json, ConfigData.class);
-                });
+
+                if (versionConfigData.version < 3) {
+                    config = GSON.fromJson(json, ConfigDataV2.class).update();
+                    Files.writeString(FabricLoader.getInstance().getConfigDir().resolve("styled-chat.json_old_v2"), json, StandardCharsets.UTF_8);
+                } else {
+                    config = GSON.fromJson(json, ConfigData.class);
+                }
 
                 config.defaultStyle.fillMissing();
             } else {
                 config = new ConfigData();
             }
 
-            BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(configFile), StandardCharsets.UTF_8));
-            writer.write(GSON.toJson(config));
-            writer.close();
+            Files.writeString(configFile, GSON.toJson(config), StandardCharsets.UTF_8);
 
             configData = config;
             return true;
